# AreaFlow

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  NOTICE  README.md  SECURITY.md  SUPPORT.md  docker-compose.yml  go.mod  go.sum  makefile_smoke_test.go  package-lock.json  package.json
.github/: dependabot.yml  pull_request_template.md
desktop/: README.md  index.html  package-lock.json  package.json  vite.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
docs/: README.md  roadmap.md
governance/: README.md  asw-ewf-001-adoption.yaml
migrations/: 000002_v0_3_command_requests.sql  000003_v0_3_gate_results.sql  000009_v1_boundary_foundation.sql  000013_v1_migration_checksums.sql  000015_v1_oidc_identity.sql  000017_v1_web_sessions.sql  000018_v1_token_lifecycle.sql  000019_v1_artifact_retention.sql
proposals/: README.md  auth-team-secret.md  budget-and-quota.md  execution-opening.md  high-risk-apply.md  integrations-and-webhooks.md  plugin-marketplace.md  team-and-remote-control.md  web-design-refresh.md
schemas/: README.md  asw-ewf-001-adoption.schema.json  status-projection.schema.json
scripts/: audit-package-a-authorization-packet.sh  audit-package-a-dirty-review.sh  audit-package-a-readiness.sh  audit-package-a-source-hash.sh  audit-package-b-authorization-packet.sh  audit-package-b-dirty-review.sh  audit-package-b-readiness.sh  brand-assets.cjs  check-asw-governance.mjs  check-doc-links.mjs  (+56 more)
(+500 files in other folders)
