[package]
name = "areaflow-desktop"
version = "0.0.0"
description = "AreaFlow desktop shell"
authors = ["AreaFlow"]
edition = "2021"

[lib]
name = "areaflow_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
